# django_course

./: .env.sample  .flake8  README.md  mailing.json  pyproject.toml  requirements.txt
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: create_manager_group.py  export_mailing_data.py  send_mailing.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing_service/: settings.py  urls.py
templates/: base.html
templates/account/: login.html  logout.html  logout_success.html  password_change.html  password_change_done.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/mailing/: home.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_statistics.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_form.html  recipient_list.html
templates/users/: edit_profile.html  profile.html
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
